k8s/files/demo/demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /event
        pathType: Prefix
        backend:
          service:
            name: el-event-listener-demo
            port:
              number: 8080
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: el-hello-listener
            port:
              number: 8080
